add warning if metamask not installed

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <div class="mx-auto text-center my-5">
         <p class="text-5xl">EthJack</p>
-        <button class="enableEthereumButton">Enable Ethereum</button>
-        <h2>Account: <span class="showAccount"></span></h2>
+        <button class="enableEthereumButton">Click Here to Enable your MetaMask</button>
+        <h2>Your Wallet Address: <span class="showAccount"></span></h2>
     </div>
 
     
