--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
     <div class="mx-auto text-center my-5">
         <p class="text-5xl">EthJack</p>
-        <button class="enableEthereumButton">Click Here to Enable your MetaMask</button>
-        <h2>Your Wallet Address: <span class="showAccount"></span></h2>
+        <div class="mt-20 text-4xl text-red-500 justify-items-center">
+            <button class="enableEthereumButton">Click Here to Enable your MetaMask</button>
+        </div>
+        <h2><span class="showAccount"></span></h2>
     </div>
 
     
