--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
 
-    <div class="mx-auto text-center my-5">
-        <p class="text-5xl">EthJack</p>
-        <div class="mt-20 text-4xl text-red-500 justify-items-center">
+    <div class="shadow select-none md:pl-10 pt-10 mx-auto text-center md:text-left bg-gray-100 py-5 text-white tracking-wide">
+        <p class="w-full h-20 text-5xl font-light text-blue-600">♠️ Eth<span class="text-gray-700 font-bold">Jack</span></p>
+    </div>
+
+    <div class="text-center">
+        <div class="mt-20 text-4xl text-gray-900 justify-items-center">
             <button class="enableEthereumButton">Click Here to Enable your MetaMask</button>
         </div>
         <h2><span class="showAccount"></span></h2>
