--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
     </div>
 
     <div class="text-center">
-        <div class="mt-20 text-4xl text-gray-900 justify-items-center">
+        <div class="mt-3 text-4xl text-gray-900 justify-items-center">
             <button class="enableEthereumButton">Click Here to Enable your MetaMask 🦊</button>
         </div>
-        <h2><span class="showAccount"></span></h2>
+        <p><span class="showAccount"></span></p>
     </div>
-
-    
 
     <div id="app">
         <dealer address="0x6768d9a324e94392f6b76dCc737213EA0b7EC9b2"></dealer>
