--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
 </head>
 <body>
 
-    <div class="shadow select-none md:pl-10 pt-5 mx-auto text-center md:text-left bg-gray-100  text-white tracking-wide">
+    <div class="shadow select-none md:pl-10 pt-5 mx-auto text-center md:text-left bg-gray-100 mb-10 text-white tracking-wide">
         <p class="w-full h-20 text-5xl font-light text-blue-600">♠️ Eth<span class="text-gray-700 font-bold">Jack</span></p>
     </div>
 
     <div class="text-center">
-        <div class="mt-3 text-4xl text-gray-900 justify-items-center">
-            <button class="enableEthereumButton">Click Here to Enable your MetaMask 🦊</button>
-        </div>
+            <button class="enableEthereumButton mx-auto py-10 mt-40 text-4xl bg-blue-600 rounded-lg shadow-lg w-1/2 text-white font-bold justify-items-center">Click Here to Enable MetaMask 🦊</button>
         <p><span class="showAccount"></span></p>
     </div>
 
     <div id="app">
         <dealer address="0x6768d9a324e94392f6b76dCc737213EA0b7EC9b2"></dealer>
     </div>
-
+    <div class="text-gray-300 text-center text-sm my-10">made by jet simon (0x6768d9a324e94392f6b76dCc737213EA0b7EC9b2)</div>
     <script src="js/app.js"></script>
 </body>
 </html>
