--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="app">
         <dealer address="0x6768d9a324e94392f6b76dCc737213EA0b7EC9b2"></dealer>
     </div>
-    <div class="text-gray-300 text-center text-sm">made by jet simon (0x6768d9a324e94392f6b76dCc737213EA0b7EC9b2)</div>
+    <div class="text-gray-300 text-center text-sm pt-5">made by jet simon (0x6768d9a324e94392f6b76dCc737213EA0b7EC9b2)</div>
     <script src="js/app.js"></script>
 </body>
 </html>
