--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p><span class="showAccount"></span></p>
     </div>
 
-    <div id="app">
+    <div id="app" class="mb-auto h-screen">
         <dealer address="0x6768d9a324e94392f6b76dCc737213EA0b7EC9b2"></dealer>
     </div>
     <div class="text-gray-300 text-center text-sm pt-5">made by jet simon (0x6768d9a324e94392f6b76dCc737213EA0b7EC9b2)</div>
