finish styling v1, move balance box to vue component
still lots to clean up here but looks a bit better

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+    
     <div class="shadow select-none md:pl-10 pt-5 mx-auto text-center md:text-left bg-gray-100 mb-10 text-white tracking-wide">
         <p class="w-full h-20 text-5xl font-light text-blue-600">♠️ Eth<span class="text-gray-700 font-bold">Jack</span></p>
     </div>
 
     <div class="text-center">
-            <button class="enableEthereumButton mx-auto py-10 mt-40 text-4xl bg-blue-600 rounded-lg shadow-lg w-1/2 text-white font-bold justify-items-center">Click Here to Enable MetaMask 🦊</button>
+            <button class="enableEthereumButton mx-auto py-10 mt-40 text-4xl hover:bg-blue-700 bg-blue-600 rounded-lg shadow-lg w-1/2 text-white font-bold justify-items-center">Click Here to Enable MetaMask 🦊</button>
         <p><span class="showAccount"></span></p>
     </div>
 
